--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "milligram": "^1.3.0",
     "react": "^16.5.2",
