--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "milligram": "^1.3.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
