--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "milligram": "^1.3.0",
+    "pdfkit": "^0.9.0",
+    "pdfmake": "^0.1.53",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-pdf": "^4.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
   },
