--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "dotenv": "^6.2.0",
     "milligram": "^1.3.0",
     "pdfkit": "^0.9.0",
     "pdfmake": "^0.1.53",
@@ -17,6 +18,7 @@
     "react-scripts": "2.0.4"
   },
   "scripts": {
+    "deploy": "npm run build && firebase deploy",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
