--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "html2canvas": "^1.0.0-alpha.12",
+    "jspdf": "^1.5.3",
     "milligram": "^1.3.0",
     "pdfkit": "^0.9.0",
     "pdfmake": "^0.1.53",
