--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^1.4.1",
+    "@react-pdf/styled-components": "^1.3.0",
     "axios": "^0.18.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
