--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
+    "firebase": "^5.9.2",
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.5.3",
     "milligram": "^1.3.0",
@@ -17,6 +18,7 @@
     "pdfmake": "^0.1.53",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-firebase-file-uploader": "^2.4.2",
     "react-pdf": "^4.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
