--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "cors-anywhere": "^0.4.1",
     "dotenv": "^6.2.0",
     "firebase": "^5.9.3",
     "html2canvas": "^1.0.0-alpha.12",
