--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.5.3",
     "milligram": "^1.3.0",
+    "node-sass": "^4.12.0",
     "pdfkit": "^0.9.0",
     "pdfmake": "^0.1.53",
     "react": "^16.5.2",
